--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=UserService
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/userservice
-spring.datasource.username=userserviceuser
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${USER_SERVICE_URL}
+spring.datasource.username=${USER_SERVICE_USER}
+spring.datasource.password=${USER_SERVICE_PWD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-server.port=3020
-logging.level.org.springframework.web=TRACE
-logging.level.org.springframework.security=TRACE
+server.port=${SERVER_PORT}
+#logging.level.org.springframework.web=TRACE
+#logging.level.org.springframework.security=TRACE
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://locaLhost:8761/eureka
 #spring.security.user.name=user
 #spring.security.user.password=password
 #spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-id=oidc-client
